<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="presenterLogin"
            type="com.xuanbang.me.piepxe.ui.login.PresenterLogin" />

        <variable
            name="loginViewModel"
            type="com.xuanbang.me.piepxe.ui.login.viewmodels.LoginAccountFragmentViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_components_24px" />


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="8dp"
                app:strokeColor="#cccccc"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:hint="@string/input_username"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        app:endIconDrawable="@drawable/ic_person_outline_black_24dp"
                        app:endIconMode="custom"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{loginViewModel.mUserModel.login}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/input_password"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        app:endIconDrawable="@drawable/ic_lock_outline_black_24dp"
                        app:endIconMode="custom"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:text="@{loginViewModel.mUserModel.password}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp">

                        <com.google.android.material.button.MaterialButton
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:singleLine="true"
                            android:text="@string/login_remember_pass"
                            android:textAllCaps="false" />

                        <com.google.android.material.button.MaterialButton
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:singleLine="true"
                            android:text="@string/login_forget_pass"
                            android:textAllCaps="false" />
                    </LinearLayout>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/material_outlined_button"
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:onClick="@{(view)->presenterLogin.login(view)}"
                        android:text="@string/login_text" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:onClick="@{(view)->presenterLogin.register(view)}"
                        android:text="@string/login_register" />

                    <com.xuanbang.me.view.SeparatorTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:text="@string/login_or" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:gravity="center_vertical"
                        android:onClick="@{(view)->presenterLogin.loginWithFacebook(view)}"
                        android:text="@string/login_text_fb"
                        app:icon="@drawable/ic_con_facebook_24"
                        app:iconGravity="start"
                        app:iconSize="16dp"
                        app:strokeColor="#0066ff" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:gravity="center_vertical"
                        android:onClick="@{(view)->presenterLogin.loginWithGoogle(view)}"
                        android:text="@string/login_text_google"
                        android:textColor="#ff3300"
                        app:icon="@drawable/ic_icon_google"
                        app:iconGravity="start"
                        app:rippleColor="#ffc2b3"
                        app:iconTint="#ff3300"
                        app:strokeColor="#ff3300" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>